--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@web-master/node-web-fetch": "^0.10.0"
+    "@web-master/node-web-fetch": "^0.8.0"
   },
   "devDependencies": {
     "@nestjs/common": "^7.6.15",
+    "@types/cheerio": "^0.22.29",
+    "@types/enzyme": "^3.10.8",
     "@types/node": "^14.14.36",
     "ava": "^3.15.0",
     "reflect-metadata": "^0.1.13",
